Removed commons-io from dev server
And from vaadin-spring where it leaked into via dev-server.